[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "drops"
version = "1.1.0"
authors = [
  { name="szerr", email="i@szerr.org" },
]
description = "drops 是基于 ssh 和 docker-compose 的运维模板，附带的 drops 命令可以方便的管理项目，部署服务。"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyyaml >= 5.3",
  "paramiko >= 2.12",
  "watchdog >= 3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/szerr/drops"
"Bug Tracker" = "https://github.com/szerr/drops/issues"

[project.scripts]
drops = 'drops.console.main:main'
